# cicd-test

./: Dockerfile  pyproject.toml
.github/workflows/: python-app.yml
cicd/: foo.py
tests/: test_foo.py
