[tool.poetry]
name = "foobar"
version = "0.1.0"
description = ""
authors = ["btang164 <billy.tang164@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
networkx = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
